unpackaged/main/default/objects/Revenue__c/Revenue__c.object-meta.xml
<CustomObject>
    <label>Revenue Recognised</label>
    <nameField>
        <label>Revenue Entry ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognised</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>