unpackaged/main/default/objects/Revenue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenue Recognised</relationshipLabel>
    <relationshipName>Revenue_Recognised</relationshipName>
    <type>Lookup</type>
</CustomField>