unpackaged/main/default/objects/Revenue__c/fields/Account_Debtor_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Debtor_Category__c</fullName>
    <formula>Invoice__r.Opportunity__r.Account.Debtor_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Debtor Category</label>
    <type>Text</type>
</CustomField>