unpackaged/main/default/objects/Revenue__c/fields/AccountName2__c.field-meta.xml
<CustomField>
    <fullName>AccountName2__c</fullName>
    <formula>AccountNameTrig__c</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>