unpackaged/main/default/objects/Revenue__c/fields/AccountNameTrig__c.field-meta.xml
<CustomField>
    <fullName>AccountNameTrig__c</fullName>
    <label>AccountNameTrig</label>
    <length>255</length>
    <type>Text</type>
</CustomField>