unpackaged/main/default/objects/Revenue__c/fields/Ageing_2__c.field-meta.xml
<CustomField>
    <fullName>Ageing_2__c</fullName>
    <formula>IF( Ageing_Step_1__c &lt;=30, "Current",IF( Ageing_Step_1__c &lt;=  60, "Period 1", IF( Ageing_Step_1__c  &lt;= 90 ,"Period 2", IF( Ageing_Step_1__c  &lt;= 120,"Period 3", IF( Ageing_Step_1__c &gt;120,"Previous" , " Other")))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing 2</label>
    <type>Text</type>
</CustomField>