unpackaged/main/default/objects/Revenue__c/fields/Ageing_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Step_1__c</fullName>
    <formula>TODAY()  -  Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing Step 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>