unpackaged/main/default/objects/Revenue__c/fields/Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary__c</fullName>
    <formula>Grouping__r.Contractual_Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>