unpackaged/main/default/objects/Revenue__c/fields/April_P_L__c.field-meta.xml
<CustomField>
    <fullName>April_P_L__c</fullName>
    <formula>IF(MONTH( Date__c )=4, P_L__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>April P&amp;L</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>