unpackaged/main/default/objects/Revenue__c/fields/Autodesk_Classification_Group__c.field-meta.xml
<CustomField>
    <fullName>Autodesk_Classification_Group__c</fullName>
    <label>Autodesk Classification Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>AEC-AS</fullName>
            </value>
            <value>
                <fullName>AEC-FA</fullName>
            </value>
            <value>
                <fullName>HORZ</fullName>
            </value>
            <value>
                <fullName>M-E</fullName>
            </value>
            <value>
                <fullName>MFG</fullName>
            </value>
            <value>
                <fullName>MFG-ID</fullName>
            </value>
            <value>
                <fullName>MFG-MA</fullName>
            </value>
            <value>
                <fullName>MFG-PD</fullName>
            </value>
            <value>
                <fullName>MFG-SI</fullName>
            </value>
            <value>
                <fullName>Majenta Delivered Services - Consultancy</fullName>
            </value>
            <value>
                <fullName>Majenta Delivered Services - Training</fullName>
            </value>
            <value>
                <fullName>Majenta Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>