unpackaged/main/default/objects/Revenue__c/fields/Autodesk_Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Autodesk_Solution_Type__c</fullName>
    <label>Autodesk Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>PSEB</fullName>
            </value>
            <value>
                <fullName>ANIM</fullName>
            </value>
            <value>
                <fullName>MFG</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Majenta Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>