unpackaged/main/default/objects/Revenue__c/fields/BalanceBroughtForward__c.field-meta.xml
<CustomField>
    <fullName>BalanceBroughtForward__c</fullName>
    <description>(MONTH(DATE(YEAR(TODAY())-1, 12, 31)
) - MONTH(ContractStartDate__c)) *  (T_Margin__c /  Contract_Months__c)</description>
    <formula>IF( ContractStartDate__c &lt;  DATE(YEAR(TODAY()) ,01,01), (MONTH(DATE(YEAR(TODAY())-1, 12, 31)) - MONTH(ContractStartDate__c)+1) *  (T_Margin__c /  Contract_Months__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Brought Forward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>