unpackaged/main/default/objects/Revenue__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <formula>Invoice__r.BillingAccount__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Billing Country</label>
    <type>Text</type>
</CustomField>