unpackaged/main/default/objects/Revenue__c/fields/Billing_Country_V2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_V2__c</fullName>
    <formula>Opportunity__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country V2</label>
    <type>Text</type>
</CustomField>