unpackaged/main/default/objects/Revenue__c/fields/Billing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email_Address__c</fullName>
    <formula>BillingEmailAddressTrig__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Email Address</label>
    <type>Text</type>
</CustomField>