unpackaged/main/default/objects/Revenue__c/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>One year Annual</fullName>
            </value>
            <value>
                <fullName>Multi Year Annual</fullName>
            </value>
            <value>
                <fullName>Billed up front in Full</fullName>
            </value>
            <value>
                <fullName>Pro Rata First or last period Quarterly</fullName>
            </value>
            <value>
                <fullName>Services Billing N/A</fullName>
            </value>
            <value>
                <fullName>Training Billing N/A</fullName>
            </value>
            <value>
                <fullName>6 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>