unpackaged/main/default/objects/Revenue__c/fields/Billing_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Post_Code__c</fullName>
    <label>Billing Post Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>