unpackaged/main/default/objects/Revenue__c/fields/BillingEmailAddressTrig__c.field-meta.xml
<CustomField>
    <fullName>BillingEmailAddressTrig__c</fullName>
    <label>BillingEmailAddressTrig</label>
    <type>Email</type>
</CustomField>