unpackaged/main/default/objects/Revenue__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>