unpackaged/main/default/objects/Revenue__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>CASE(Type__c,
"SI", TEXT(InvoiceLineItem__r.Product__r.Category__c),
"SC", TEXT(CreditNoteLineItem__r.Product__r.Category__c),
"Error")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>