unpackaged/main/default/objects/Revenue__c/fields/Collections_At_35__c.field-meta.xml
<CustomField>
    <fullName>Collections_At_35__c</fullName>
    <formula>Total_Amount__c *0.35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collections At 35%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>