unpackaged/main/default/objects/Revenue__c/fields/Collections_at_65__c.field-meta.xml
<CustomField>
    <fullName>Collections_at_65__c</fullName>
    <formula>Total_Amount__c *0.65</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collections at 65%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>