unpackaged/main/default/objects/Revenue__c/fields/Commission_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Commission_Adjustment__c</fullName>
    <label>Commission Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>