unpackaged/main/default/objects/Revenue__c/fields/Commission_after_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Commission_after_Adjustment__c</fullName>
    <formula>Commission_Paid__c + Commission_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission after Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>