unpackaged/main/default/objects/Revenue__c/fields/CommissionCompany__c.field-meta.xml
<CustomField>
    <fullName>CommissionCompany__c</fullName>
    <formula>CASE(ProductFamily__c,
"IT", "SOLUTIONS",
"Software", "SOLUTIONS",
"Data Services", "SOLUTIONS",
"enerjyhub", "ENERJYHUB",
"PLM", "PLM",
"Solid Edge", "PLM",
"SOLUTIONS")</formula>
    <label>Commission Company</label>
    <type>Text</type>
</CustomField>