unpackaged/main/default/objects/Revenue__c/fields/Contract_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Months__c</fullName>
    <formula>(MONTH(ContractEndDate__c ) + (12*(YEAR(ContractEndDate__c )-YEAR(ContractStartDate__c ))) - MONTH(ContractStartDate__c ))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>