unpackaged/main/default/objects/Revenue__c/fields/Cost_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Cost_Behaviour__c</fullName>
    <label>Cost Behaviour</label>
    <length>100</length>
    <type>Text</type>
</CustomField>