unpackaged/main/default/objects/Revenue__c/fields/Cost_Classification__c.field-meta.xml
<CustomField>
    <fullName>Cost_Classification__c</fullName>
    <description>Reclassification Jan 2019</description>
    <label>Cost Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02 200GB Shared Data</fullName>
            </value>
            <value>
                <fullName>Adobe Acropro Renewal</fullName>
            </value>
            <value>
                <fullName>Agency - Design</fullName>
            </value>
            <value>
                <fullName>Air Con Maintenance Brentwood</fullName>
            </value>
            <value>
                <fullName>Air Con Maintenance Whitley</fullName>
            </value>
            <value>
                <fullName>Alarm Monitoring &amp; Maintenance Brentwood</fullName>
            </value>
            <value>
                <fullName>Alarm Monitoring &amp; Maintenance Whitley</fullName>
            </value>
            <value>
                <fullName>Aldermore Whitley Re-Fit Leasing</fullName>
            </value>
            <value>
                <fullName>Annual Weekday Collection Fee</fullName>
            </value>
            <value>
                <fullName>Antivirus / Firewall, Backup</fullName>
            </value>
            <value>
                <fullName>Apprenticeship Levy</fullName>
            </value>
            <value>
                <fullName>Audit Acrl</fullName>
            </value>
            <value>
                <fullName>Bad Debt</fullName>
            </value>
            <value>
                <fullName>Bank Admin Fee</fullName>
                <label>Bank Charges for Altecnix, Imajine &amp; Majenta Ltd</label>
            </value>
            <value>
                <fullName>Bank Service Charge</fullName>
            </value>
            <value>
                <fullName>Bathroom Purchases</fullName>
            </value>
            <value>
                <fullName>Staff Canteen Purchases</fullName>
                <label>Beverage Supplies and other costs</label>
            </value>
            <value>
                <fullName>Bluesto Infinite Rental of Equip Leasing</fullName>
            </value>
            <value>
                <fullName>Branded Goods</fullName>
            </value>
            <value>
                <fullName>Brentwood Council Rates</fullName>
            </value>
            <value>
                <fullName>Brentwood Electricity - JAMESAN</fullName>
            </value>
            <value>
                <fullName>Brentwood Service Charge</fullName>
            </value>
            <value>
                <fullName>BSi Quality Audit</fullName>
            </value>
            <value>
                <fullName>BT - Line Rentals</fullName>
            </value>
            <value>
                <fullName>Buffer Accrual</fullName>
            </value>
            <value>
                <fullName>Bupa</fullName>
            </value>
            <value>
                <fullName>Business Consultancy</fullName>
            </value>
            <value>
                <fullName>BW &amp; Whitley  IT - Hardware Lease Expiry 31/10/2022  Societe General</fullName>
            </value>
            <value>
                <fullName>CBIL Form MHA</fullName>
            </value>
            <value>
                <fullName>CBIL Loan Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>