unpackaged/main/default/objects/Revenue__c/fields/Cost_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sub_Type__c</fullName>
    <label>Cost Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>