unpackaged/main/default/objects/Revenue__c/fields/Credit_Control_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Control_Note__c</fullName>
    <label>Credit Control Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>