unpackaged/main/default/objects/Revenue__c/fields/CreditNoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteLineItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Credit Note Line Item</label>
    <referenceTo>CreditNoteLineItem__c</referenceTo>
    <relationshipName>CreditNoteLineItemJournalEntries</relationshipName>
    <type>Lookup</type>
</CustomField>