unpackaged/main/default/objects/Revenue__c/fields/CreditNoteNumberTrig__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteNumberTrig__c</fullName>
    <label>Credit Note Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>