unpackaged/main/default/objects/Revenue__c/fields/Customer_Querying_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Querying_Invoice__c</fullName>
    <label>Customer Querying Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NOW RESOLVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>