unpackaged/main/default/objects/Revenue__c/fields/CV_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CV_TYPE__c</fullName>
    <formula>Grouping__r.FLD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CV TYPE</label>
    <type>Text</type>
</CustomField>