unpackaged/main/default/objects/Revenue__c/fields/DASS_REV_TYPE_4_SP__c.field-meta.xml
<CustomField>
    <fullName>DASS_REV_TYPE_4_SP__c</fullName>
    <formula>TEXT(Opportunity__r.DS_Revenue_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DASS REV TYPE 4 SP</label>
    <type>Text</type>
</CustomField>