unpackaged/main/default/objects/Revenue__c/fields/DASS_RT_BY_ILI__c.field-meta.xml
<CustomField>
    <fullName>DASS_RT_BY_ILI__c</fullName>
    <formula>TEXT(InvoiceLineItem__r.Product__r.DassaultTypePick__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DASS RT BY ILI</label>
    <type>Text</type>
</CustomField>