unpackaged/main/default/objects/Revenue__c/fields/Dassault_Invoice_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Invoice_Amount_Total__c</fullName>
    <label>Dassault Invoice Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>