unpackaged/main/default/objects/Revenue__c/fields/Dassault_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Invoice_Number__c</fullName>
    <label>Dassault Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>