unpackaged/main/default/objects/Revenue__c/fields/Dassault_Payment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Dassault_Payment_Due_Date__c</fullName>
    <label>Dassault Payment Due Date</label>
    <type>Date</type>
</CustomField>