unpackaged/main/default/objects/Revenue__c/fields/Date2__c.field-meta.xml
<CustomField>
    <fullName>Date2__c</fullName>
    <formula>DateFormulaTrig__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date (Formula)</label>
    <type>Date</type>
</CustomField>