unpackaged/main/default/objects/Revenue__c/fields/Date_FCast_YR_1__c.field-meta.xml
<CustomField>
    <fullName>Date_FCast_YR_1__c</fullName>
    <formula>Date__c +365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date FCast YR 1</label>
    <type>Date</type>
</CustomField>