unpackaged/main/default/objects/Revenue__c/fields/DateFormulaTrig__c.field-meta.xml
<CustomField>
    <fullName>DateFormulaTrig__c</fullName>
    <label>DateFormulaTrig</label>
    <type>Date</type>
</CustomField>