unpackaged/main/default/objects/Revenue__c/fields/Debtor_Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Assigned_to__c</fullName>
    <formula>Opportunity__r.Account.CC_Asigned_to__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debtor Assigned to</label>
    <type>Text</type>
</CustomField>