unpackaged/main/default/objects/Revenue__c/fields/Deferred_Income_Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Income_Buy_Price__c</fullName>
    <formula>( NetAmount__c - NetMargin__c )/ No_of_Billing_Months_in_Days__c * Deferred_Income_Date_Diff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferred Income Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>