unpackaged/main/default/objects/Revenue__c/fields/Deferred_Income_Date_Diff__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Income_Date_Diff__c</fullName>
    <formula>TODAY()-19-Maint_Billing_on_Invoice_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferred Income Date Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>