unpackaged/main/default/objects/Revenue__c/fields/Deferred_Income_Margin__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Income_Margin__c</fullName>
    <formula>(NetMargin__c / No_of_Billing_Months_in_Days__c )* Deferred_Income_Date_Diff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferred Income Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>