unpackaged/main/default/objects/Revenue__c/fields/Division_V2__c.field-meta.xml
<CustomField>
    <fullName>Division_V2__c</fullName>
    <formula>IF( ProductFamily__c = "enerjyhub","Divisiona E",
IF( ProductFamily__c = "Dassault","Division D", 
IF( ProductFamily__c = "Data Services","Division DS", 
IF( ProductFamily__c = "Construction","Division C","Other"))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division V2</label>
    <type>Text</type>
</CustomField>