unpackaged/main/default/objects/Revenue__c/fields/EH_Invoice_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>EH_Invoice_Payment_Status__c</fullName>
    <label>EH Invoice Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice emailed to Customer</fullName>
            </value>
            <value>
                <fullName>Invoice Uploaded to Sage</fullName>
            </value>
            <value>
                <fullName>Invoice rejected by customer - reverted to Salesteam awaiting response</fullName>
            </value>
            <value>
                <fullName>Customer requested further information - now sent</fullName>
            </value>
            <value>
                <fullName>Customer Confirmed payment</fullName>
            </value>
            <value>
                <fullName>Payment IN - Billing Status Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>