unpackaged/main/default/objects/Revenue__c/fields/Expected_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Date__c</fullName>
    <formula>Date__c + Payment_Terms_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Payment Date</label>
    <type>Date</type>
</CustomField>