unpackaged/main/default/objects/Revenue__c/fields/FCAST_21__c.field-meta.xml
<CustomField>
    <fullName>FCAST_21__c</fullName>
    <formula>IF(MONTH( Date__c )=1, P_L__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCAST 21</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>