unpackaged/main/default/objects/Revenue__c/fields/Fcast_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Fcast_Business_Type__c</fullName>
    <formula>IF( ProductType__c = "Subscription", "Renewal",
IF( ProductType__c = "Support", "Renewal",
IF( ProductType__c = "Maintenance", "Renewal",  BusinessType__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fcast Business Type</label>
    <type>Text</type>
</CustomField>