unpackaged/main/default/objects/Revenue__c/fields/FCAST_Date_Yr_2__c.field-meta.xml
<CustomField>
    <fullName>FCAST_Date_Yr_2__c</fullName>
    <formula>Date__c +730</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCAST Date YR  2</label>
    <type>Date</type>
</CustomField>