unpackaged/main/default/objects/Revenue__c/fields/FCAST_JAN__c.field-meta.xml
<CustomField>
    <fullName>FCAST_JAN__c</fullName>
    <formula>IF( BusinessType__c ="FCAST 21", JAN_P_L__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FCAST JAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>