unpackaged/main/default/objects/Revenue__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <formula>IF(MONTH( Date__c )&lt;=12, P_L__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>