unpackaged/main/default/objects/Revenue__c/fields/GrossAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossAmount__c</fullName>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>