unpackaged/main/default/objects/Revenue__c/fields/GrossMargin__c.field-meta.xml
<CustomField>
    <fullName>GrossMargin__c</fullName>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>