unpackaged/main/default/objects/Revenue__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNL</label>
    <referenceTo>PNL__c</referenceTo>
    <relationshipLabel>Revenue Recognised</relationshipLabel>
    <relationshipName>Revenue_Recognised</relationshipName>
    <type>Lookup</type>
</CustomField>